Changing content of auth.html

--- a/auth.html
+++ b/auth.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <form action="./unauth.html">
+    <form action="./index.html">
       <button type="submit">Go to the unauthenticated space!</button>
     </form>
     <h2>
