Updating auth.html

--- a/auth.html
+++ b/auth.html
@@ -12,6 +12,7 @@
 
   <body>
     <form action="./index.html">
+      <!-- Changed? -->
       <button type="submit">Go to the unauthenticated space!</button>
     </form>
     <h2>
