--- a/auth.html
+++ b/auth.html
@@ -8,6 +8,8 @@
     <title id="webpageTitle">Authenticated page</title>
     <!-- Send page title and cart total value using SDEs -->
     <script src="script.js"></script>
+    <!-- Authentication -->
+    <script src="auth.js"></script>
   </head>
 
   <body>
