--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -2,8 +2,14 @@
 
 <html>
   <head>
+    <script src="./lpTag.js"></script>
+    <script src="./agentSDK.js"></script>
     <title>OMDb API Widget</title>
   </head>
 
-  <body></body>
+  <body>
+    <div id="apiResponse"></div>
+  </body>
+
+  <script defer src="./omdbApiRes.js"></script>
 </html>
