--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <script src="./lpTag.js"></script>
+    <!-- <script src="./lpTag.js"></script> -->
     <script src="./agentSDK.js"></script>
     <title>OMDb API Widget</title>
   </head>
