Initial commit related to OMDb API widget

--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -8,7 +8,13 @@
   </head>
 
   <body>
-    <div id="apiResponse"></div>
+    <!-- <form id="omdb">
+      <label for="userMessage">User message:</label>
+      <input type="text" id="userMessage" name="userMessage" />
+
+      <button type="submit">Get OMDb API response!</button>
+    </form> -->
+    <div id="userMessage"></div>
   </body>
 
   <script defer src="./omdbApiRes.js"></script>
