Check if updated in widget

--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -14,6 +14,7 @@
 
       <button type="submit">Get OMDb API response!</button>
     </form> -->
+    <div>API response will be displayed here!</div>
     <div id="userMessage"></div>
   </body>
 
