omdbWidget.html and omdbApiRes.js modified

--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -8,14 +8,14 @@
   </head>
 
   <body>
-    <!-- <form id="omdb">
+    <form id="omdb">
       <label for="userMessage">User message:</label>
       <input type="text" id="userMessage" name="userMessage" />
 
       <button type="submit">Get OMDb API response!</button>
-    </form> -->
-    <div>API response will be displayed here!</div>
-    <div id="userMessage"></div>
+    </form>
+
+    <div id="apiResponse"></div>
   </body>
 
   <script defer src="./omdbApiRes.js"></script>
