UI changes in OMDbWidget.html

--- a/omdbWidget.html
+++ b/omdbWidget.html
@@ -15,7 +15,8 @@
       <button type="submit">Get OMDb API response!</button>
     </form>
 
-    <div id="apiResponse"></div>
+    <div id="movieTitle"></div>
+    <div id="movieYear"></div>
   </body>
 
   <script defer src="./omdbApiRes.js"></script>
